feat: add backend folder

--- a/app/backend/Makefile
+++ b/app/backend/Makefile
@@ -1,2 +1,9 @@
 run:
-	go run ./cmd/server | true
+	go run ./cmd/server
+run-docker:
+	docker-compose up -d
+stop-docker:
+	docker-compose down
+run-dev:
+	docker-compose up -d
+	go run ./cmd/server
