--- a/fabric-3.1.1/.gitignore
+++ b/fabric-3.1.1/.gitignore
@@ -64,3 +64,7 @@ install-fabric.sh
 # Encryption test binary files (keep source files)
 libencryption.so
 encrypt.o
+
+crypto-config/
+fabric-samples/
+my-network/
