--- a/fabric-3.1.1/.gitignore
+++ b/fabric-3.1.1/.gitignore
@@ -75,6 +75,11 @@ install-fabric.sh
 libencryption.so
 encrypt.o
 
+# MKV implementation test files and binaries
+libmkv.so
+mkv.o
+MKV256.o
+
 crypto-config/
 fabric-samples/
 my-network/
