--- a/fabric-3.1.1/core/ledger/kvledger/txmgmt/statedb/Makefile
+++ b/fabric-3.1.1/core/ledger/kvledger/txmgmt/statedb/Makefile
@@ -1,14 +1,14 @@
-# Makefile for encryption C functions
+# Makefile for MKV encryption C functions
 CC = gcc
 CFLAGS = -Wall -Wextra -O2 -fPIC
 LDFLAGS = -shared
 LIBS = -lssl -lcrypto
 
 # Target library
-TARGET = libencryption.so
+TARGET = libmkv.so
 
 # Source files
-SOURCES = encrypt.c
+SOURCES = mkv/mkv.c mkv/MKV256.c
 OBJECTS = $(SOURCES:.c=.o)
 
 # Default target
@@ -18,20 +18,19 @@ all: $(TARGET)
 $(TARGET): $(OBJECTS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJECTS) $(LIBS)
 
-
-
 # Compile C source files
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Test target
 test: $(TARGET)
-	@echo "C library built successfully: $(TARGET)"
+	@echo "MKV library built successfully: $(TARGET)"
 	@echo "Run Go tests with: go test ./..."
 
 # Clean build artifacts
 clean:
 	rm -f $(OBJECTS) $(TARGET)
+	rm -f mkv/*.o
 
 # Install library (optional)
 install: $(TARGET)
