--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -40,6 +40,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "shiki": "^3.9.2",
     "sonner": "^2.0.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
