--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
     "next-themes": "^0.4.6",
