--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "copy-webpack-plugin": "^13.0.1",
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
@@ -47,6 +48,7 @@
     "sonner": "^2.0.5",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.0",
+    "tinymce": "^8.0.2",
     "zod": "^3.25.32"
   },
   "devDependencies": {
