--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "node scripts/copy-tinymce.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -31,7 +32,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "copy-webpack-plugin": "^13.0.1",
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
@@ -58,6 +58,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
+    "fs-extra": "^11.3.1",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
