--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -37,6 +37,7 @@
     "jose": "^6.0.11",
     "jszip": "^3.10.1",
     "lucide-react": "^0.511.0",
+    "lz-string": "^1.5.0",
     "next": "15.1.8",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
